--- a/css/styles.css
+++ b/css/styles.css
@@ -118,25 +118,34 @@ address a:focus {
 /* Section - Hero */
 .section-hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .heading-style-main {
   text-align: center;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 /* ? Є питання. Раніше я виділяв такі елементи які повторюються в проекті як кнопки і тп. в окреме місце вище від решти елементів. 
 /* ? Чи підхід ось такий як зара, ідучи від верху до низу і додаючи елемнте по черзі буде правельно верстати? 
 /* ? Чи так так само працюють вже в команді? */
 .button {
+  display: block;
+  margin: 0 auto;
   background-color: #4d5ae5;
   color: white;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  border: none;
+  padding: 16px 32px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .button:hover,
 button:focus {
   background-color: #404bbf;
 }
-
 /* Section - Features */
 .section-features {
   background-color: #fff;
@@ -183,6 +192,7 @@ button:focus {
 .footer {
   background-color: #2e2f42;
   color: #fff;
+  padding: 100px 0;
 }
 .footer .logo-span {
   color: #f4f4fd;
