--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ address a:focus {
   border: none;
   padding: 16px 32px;
   border-radius: 4px;
+  min-width: 169px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .button:hover,
@@ -167,7 +168,8 @@ button:focus {
   margin-bottom: 72px;
 }
 .section-features h2 {
-  display: none;
+  visibility: hidden;
+  margin: 0;
 }
 .section-features ul {
   display: flex;
@@ -208,12 +210,13 @@ button:focus {
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+.team-item_footer {
+  padding: 32px 0;
+}
 .team-item img {
-  margin-bottom: 32px;
   background-color: #fff;
 }
 .team-item p {
-  margin-bottom: 32px;
   background-color: #fff;
 }
 
@@ -221,12 +224,12 @@ button:focus {
 .section-portfolio {
   background-color: #fff;
 }
-.section-portfolio ul {
+.section-portfolio .portfolio_flex-list {
   display: flex;
   gap: 24px;
   flex-wrap: wrap;
 }
-.section-portfolio ul li {
+.section-portfolio .portfolio_flex-element {
   flex-basis: calc((100% - 48px) / 3);
 }
 .portfolio_card-footer {
