--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,15 @@ p {
 
 /* Global Styles */
 .visually-hidden {
-  position: absolute;
-  overflow: hidden;
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
 }
 body {
   font-family: "Roboto", sans-serif;
