--- a/css/styles.css
+++ b/css/styles.css
@@ -17,15 +17,14 @@ p {
 
 /* Global Styles */
 .visually-hidden {
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  white-space: nowrap !important;
-  border: 0 !important;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -177,10 +176,6 @@ button:focus {
   text-align: center;
   text-transform: capitalize;
   margin-bottom: 72px;
-}
-.section-features h2 {
-  visibility: hidden;
-  margin: 0;
 }
 .section-features ul {
   display: flex;
